--- a/style.css
+++ b/style.css
@@ -46,7 +46,15 @@ table{
     margin: auto;
     border-collapse: collapse;
 }
-td, th{
+th {
+    background-color: #e0f0ff;
+    color: #333;
+    padding: 10px;
+    font-weight: bold;
+    border: 1px solid black;
+    text-align: center;
+}
+td{
     border: 1px solid black;
     padding: 8px;
     text-align: center;
@@ -151,4 +159,12 @@ body.dark-mode td, body.dark-mode th {
 .app-icon span {
     font-size: 14px; /*rozmiar czcionki*/
     text-align: center;
+}
+body.dark-mode .app-icon {
+    background-color: #2a2a2a;
+    color: #eee;
+    box-shadow: 0 2px 6px rgba(255, 255, 255, 0.1);
+}
+body.dark-mode .app-icon:hover {
+    background-color: #3a3a3a;
 }
